# disrepair

./: README.md  pyproject.toml
disrepair/: __init__.py  __main__.py  check.py  cmd.py  options.py  reqfile.py
